--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 server.port=9090
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/prm
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://db4free.net:3306/prmbookshop
+spring.datasource.username=hoanthien
+spring.datasource.password=12345678
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
